bazı güncellemeler yapıldı
1 fiyatlar düzeltildi
2 login bugu fixlendi
3 hizzalamalar yapıldı
4 buton un rengi düzeltildi

--- a/giris.html
+++ b/giris.html
@@ -148,19 +148,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <!-- END #page-image -->
 
-            <!-- login1-container -->
-            <div class="login1-container">
-                <section class="login1-box box">
+            <!-- login-container -->
+            <div class="login-container">
+                <section class="login-box box">
                     <div class="box-content">
 
-                        <div class="login1-select">
+                        <div class="login-select">
                             <ul class="nav nav-tabs">
                                 <li class="active col-xs-6"><a href="#girisyap" data-toggle="tab" aria-expanded="false">Giriş Yap</a></li>
                                 <li class="col-xs-6"><a href="#kayitol" data-src="#kayitol" data-toggle="tab" aria-expanded="false">Hesap Aç</a></li>
                             </ul>
                         </div>
 
-                        <div id="myTabContent" class="tab-content login1-tab-content">
+                        <div id="myTabContent" class="tab-content login-tab-content">
                             <!-- girisyap -->
                             <div class="tab-pane animated fadeIn active in" id="girisyap">
                                 <div id="register-form-container">
@@ -244,7 +244,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </section>
             </div>
-            <!-- end #login1-container -->
+            <!-- end #login-container -->
 
         </div>
         <!-- end #full-container -->
