--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -372,7 +372,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <table class="table table-hover">
           <thead>
             <tr>
-              <th>Özellik</th>
+              <th align="left">Özellik</th>
               <th align="center">Basic</th>
               <th align="center">Business</th>
               <th align="center">Professional</th>
@@ -380,118 +380,118 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">7x24 Premium Support Pack</th>
+              <td>7x24 Premium Support Pack</td>
               <td align="center"><i style="color:red" class="fa fa-minus"></i></td>
               <td align="center"><i style="color:red" class="fa fa-minus"></i></td>
               <td align="center"><i style="color:#00E500" class="fa fa-check"></i></td>
             </tr>
 
             <tr>
-              <th scope="row">MX Backup</th>
+              <td>MX Backup</td>
               <td align="center"><i style="color:red" class="fa fa-minus"></i></td>
               <td align="center"><i style="color:#00E500" class="fa fa-check"></i></td>
               <td align="center"><i style="color:#00E500" class="fa fa-check"></i></td>
             </tr>
             <tr>
-              <th scope="row">Catch-All Özelliği</th>
+              <td>Catch-All Özelliği</td>
               <td align="center"><i style="color:red" class="fa fa-minus"></i></td>
               <td align="center"><i style="color:#00E500" class="fa fa-check"></i></td>
               <td align="center"><i style="color:#00E500" class="fa fa-check"></i></td>
             </tr>
             <tr>
-              <th scope="row">AntiSpam ve Antivirus</th>
+              <td>AntiSpam ve Antivirus</td>
               <td align="center"><a><i style="color:red" class="fa fa-minus"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
 
             <tr>
-              <th scope="row">Ücretsiz E-Mail Aktarımı</th>
+              <td>Ücretsiz E-Mail Aktarımı</td>
               <td align="center"><a><i style="color:red" class="fa fa-minus"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Esnek Arttırılabilir Depolama Alanı</th>
+              <td>Esnek Arttırılabilir Depolama Alanı</td>
               <td align="center"><a><i style="color:red" class="fa fa-minus"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
 
             <tr>
-              <th scope="row">Ücretsiz SSL Sertifikası</th>
+              <td>Ücretsiz SSL Sertifikası</td>
               <td align="center"><a><i style="color:red" class="fa fa-minus"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Outbox Arşivleme</th>
+              <td>Outbox Arşivleme</td>
               <td align="center"><a><i style="color:red" class="fa fa-minus"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Kural Yönetimi</th>
+              <td>Kural Yönetimi</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Grup Oluşturma, Alias Tanımlama</th>
+              <td>Grup Oluşturma, Alias Tanımlama</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Sınırsız Domain</th>
+              <td>Sınırsız Domain</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Sınırsız Kullanıcı</th>
+              <td>Sınırsız Kullanıcı</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">POP3 ve SMTP Desteği</th>
+              <td>POP3 ve SMTP Desteği</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Gelişmiş WebMail</th>
+              <td>Gelişmiş WebMail</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Mobil Cihazlarla Tam Uyumlu</th>
+              <td>Mobil Cihazlarla Tam Uyumlu</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Ücretsiz E-Mail Sertifikası</th>
+              <td>Ücretsiz E-Mail Sertifikası</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Firewall ve Ddos Atak Önleme</th>
+              <td>Firewall ve Ddos Atak Önleme</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Domain Akreditasyon ve İtibar Yönetimi</th>
+              <td>Domain Akreditasyon ve İtibar Yönetimi</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
             </tr>
             <tr>
-              <th scope="row">Günlük Yedekleme (Opsiyonel)</th>
+              <td>Günlük Yedekleme (Opsiyonel)</td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
               <td align="center"><a><i style="color:#00E500" class="fa fa-check"></i></a></td>
