--- a/mail-dogrulama-hizmeti.html
+++ b/mail-dogrulama-hizmeti.html
@@ -177,13 +177,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <canvas class="bubble b-blobs__b3" data-fill="#f8f8f8"></canvas>
                         </div>
                     </div>
-                    <div  class="sayac">
+                    <!-- <div  class="sayac">
                         <span class="counter counter-analog2" data-direction="up" data-format="145" data-stop="145" data-interval="10">{{ timerCount[0].Times }}</span>
                         <div class="sayac-text">
                             Günlük Sorgulanan Toplam Mail Sayısı
                         </div>
                     </div>
-                    <!-- dogrulama-form -->
+                     dogrulama-form -->
                     <div id="dogrulama-form">
                         <form class="form-inline">
 
