section etiket yerleri değiştirildi
section etiket yerleri değiştirildi

--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -216,7 +216,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         </div>
                                         <div class="ozellik-list-text">
                                             <h5>Tüm Cihaz, İşletim Sistemi ve Uygulamalara Uyumlu</h5>
-                                            <p>Mobil veya masaüstü tüm cihazlarda %100 uyumlu çalışır. Outlook, Apple Mail, eM Client, Thunderbird gibi uygulamalar ile kolay kurulum.</p>
+                                            <p id="cloud-mail">Mobil veya masaüstü tüm cihazlarda %100 uyumlu çalışır. Outlook, Apple Mail, eM Client, Thunderbird gibi uygulamalar ile kolay kurulum.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -227,7 +227,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <!-- end #ozellikler -->
                     <!-- cozumler -->
                     <div id="cozumler" class="g-item">
-                        <div id="cloud-mail" class="container">
+                        <div class="container">
                             <div class="row">
                                 <div class="col col-md-8">
                                     <h1>Kurumsal E-Mail Hosting</h1>
@@ -305,6 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <li>Ücretsiz Danışmanlık ile Domain Reputation</li>
                                         </ul>
                                     </div>
+                                    <div><p id="business"></p></div>
                                 </div>
                             </div>
                         </div>
@@ -314,7 +315,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <!-- cozumler -->
                     <div id="cozumler" class="g-item">
-                        <div id="business" class="container">
+                        <div class="container">
                             <div class="row">
                                 <div class="col col-md-8">
                                     <h1>Kurumsal E-Mail Sunucusu</h1>
