--- a/mail-dogrulama-hizmeti.html
+++ b/mail-dogrulama-hizmeti.html
@@ -7,9 +7,9 @@
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-TBZR3WZ');
-  
 
-  
+
+
   </script>
   <!-- End Google Tag Manager -->
 
@@ -73,7 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         accurateTrackBounce:true,
         webvisor:true
    });
-   
+
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/51093581" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
@@ -229,6 +229,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</div>
 						<div ng-if="smtpvalidationreponse[0].value == undefind">
 						<li class="sorgu">Böyle bir kullanıcı gerçekte var mı?</li>
+            <div><p id="syntax"></p></div>
 						</div>
                     </ul>
                 </div>
@@ -237,7 +238,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <!-- dogrulama-neden -->
             <div id="dogrulama-neden" class="g-item">
-                <div id="syntax" class="container">
+                <div class="container">
                     <div class="row">
                         <div class="col-md-6">
                             <h2>Syntax</h2>
@@ -252,13 +253,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <img src="assets/img/dogrulama/1.svg" class="vector-two-img">
                         </div>
                     </div>
+                    <div><p id="mx"></p></div>
                 </div>
             </div>
             <!-- end #ogrulama-neden -->
 
             <!-- dogrulama-neden -->
             <div id="dogrulama-neden" class="g-item">
-                <div id="mx" class="container">
+                <div class="container">
                     <div class="row">
                         <div class="dogrulama-img col-md-6">
                             <div class="vector-bg"><img src="assets/img/vector-bg.png"></div>
@@ -273,13 +275,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
                         </div>
                     </div>
+                    <div><p id="gecici"></p></div>
                 </div>
             </div>
             <!-- end #ogrulama-neden -->
 
             <!-- dogrulama-neden -->
             <div id="dogrulama-neden" class="g-item">
-                <div id="gecici" class="container">
+                <div class="container">
                     <div class="row">
                         <div class="col-md-6">
                             <h2>Geçici Posta</h2>
@@ -294,13 +297,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <img src="assets/img/dogrulama/3.svg" class="vector-two-img">
                         </div>
                     </div>
+                    <div><p id="kullanici"></p></div>
                 </div>
             </div>
             <!-- end #ogrulama-neden -->
 
             <!-- dogrulama-neden -->
             <div id="dogrulama-neden" class="g-item">
-                <div id="kullanici" class="container">
+                <div class="container">
                     <div class="row">
                         <div class="dogrulama-img col-md-6">
                             <div class="vector-bg"><img src="assets/img/vector-bg.png"></div>
@@ -440,15 +444,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.11.4/paper-full.min.js"></script>
     <script src="assets/js/text.js"></script>
     <script src="assets/js/blob.js"></script>
-	
+
 	<script>
-	
 
 
 
 
 
-	
+
+
 	</script>
 
 </body>
