--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         <div class="teklif-al">
                             <a href="toplu-mail-gonderim-fiyatlari.html" class="btn btn-blue">Fiyatlara Gözat</a>
-                            <a data-fancybox data-src="#teklif" href="javascript:;" class="btn btn-blue">Ücretsiz Başla</a>
+                            <a href="kayit.html" class="btn btn-blue">Ücretsiz Başla</a>
                         </div>
 
                     </section>
@@ -173,45 +173,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
     <!-- end #banner -->
-
-    <!-- teklif -->
-    <div id="teklif" class="site-form">
-        <div class="main-title-small">
-            <p style="font-size: 24px; color: #3c3c3c; font-weight: 700; padding: 0; margin: 0 0 10px;">Hesap Oluştur</p>
-            <p>GoMail avantajlarından yararlanmak için <br> hemen şimdi ücretsiz hesabınızı oluşturun</p>
-        </div>
-        <form id="form" action="ok.php" method="post" novalidate="novalidate">
-            <div class="row">
-                <div class="col col-md-12 col-sm-12 col-xs-12">
-                    <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Kullanıcı Adı" data-val-required="&lt;img src=&#39;images/Validate.png&#39; style=&#39;margin-top: 13px;&#39; /&gt;" data-val="true">
-                </div>
-
-                <div class="col col-md-12 col-sm-12 col-xs-12">
-                    <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Ad Soyad" data-val-required="&lt;img src=&#39;images/Validate.png&#39; style=&#39;margin-top: 13px;&#39; /&gt;" data-val="true">
-                </div>
-
-                <div class="col col-md-12 col-sm-12 col-xs-12">
-                    <input type="text" class="form-control" id="txtEposta" name="txtEposta" placeholder="E-Posta Adresi" data-val-required="&lt;img src=&#39;images/InputReqImg.png&#39; style=&#39;margin-top: 8px;&#39; /&gt;" data-val-regex="&lt;img src=&#39;images/InputReqImg.png&#39; style=&#39;margin-top: 8px;&#39; /&gt;"
-                        data-val-regex-pattern="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$" data-val="true">
-                </div>
-
-                <div class="col col-md-12 col-sm-12 col-xs-12">
-                  <input type="password" class="form-control" id="txtParola" name="txtParola" placeholder="Parola" data-val-required="<img src='images/Validate.png' style='margin-top: 13px;' />" data-val="true">
-                </div>
-
-                <div style="text-align: left; font-size: 11px; margin-bottom: 20px; padding-left: 5px;">
-                    <b><i>Belirleyeceğiniz parola;</i></b>
-                    <br>
-                    <i>Min 6 karakterden oluşmalı,</i>
-                    <br>
-                    <i>En az 1 büyük harf ve en az 1 rakam içermelidir.</i>
-                </div>
-
-                <div class="col col-md-12 col-sm-12 col-xs-12">
-                    <button class="btn btn-blue send-button" value="1" type="submit">Ücretsiz Başla</button>
-                </div>
-            </div>
-        </form>
     </div>
     <!-- end #teklif -->
 
