--- a/unuttum.html
+++ b/unuttum.html
@@ -148,12 +148,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <!-- END #page-image -->
 
-            <!-- login1-container -->
-            <div class="login1-container">
-                <section class="login1-box box">
+            <!-- login-container -->
+            <div class="login-container">
+                <section class="login-box box">
                     <div class="box-content">
 
-                        <div id="myTabContent" class="tab-content login1-tab-content">
+                        <div id="myTabContent" class="tab-content login-tab-content">
                             <!-- sifrem-unuttum -->
                             <div class="tab-pane animated fadeIn active in" id="sifrem-unuttum">
                                 <div id="register-form-container">
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </section>
             </div>
-            <!-- end #login1-container -->
+            <!-- end #login-container -->
 
         </div>
         <!-- end #full-container -->
