doğrulama sayfasına içerik
doğrulama sayfasına içerikler eklendi.

--- a/mail-dogrulama-hizmeti.html
+++ b/mail-dogrulama-hizmeti.html
@@ -241,12 +241,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <h2>Syntax</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
+                            <h2>Syntax Doğrulama Nedir?</h2>
+                            <p>Syntax doğrulama söz dizimi doğrulamasıdır. E-Mail adresleri adsoyad@alanadi.com şeklinde “@” sembolü ile ortadan ayrılmış kullanıcı kimliği ve adresini tanımlar standart bir söz diziminden oluşmalıdır.</p>
+                            <p>E-Mail adresleri kullanıcının isteği doğrultusunda harf veya rakamlardan oluşan ve kullanıcıyı belirlemek için kullanılacak herhangi bir söz dizimine sahip olabilir, ancak bazı harf ve semboller internet protokolleri gereğince standart dışı kabul edilmektedir. E-Mail adresinde kullanılabilecek semboller nokta, alt ve orta tire sembollerinden ibarettir. Kullanıcı adından virgül, yüzde işareti, soru işareti, ünlem vb. semboller kullanılamaz. Ek olarak kullanıcı adı kısmında Türkçe karakter kullanılmamalıdır.</p>
+                            <p>Veri girişi esnasında farklı nedenlerden dolayı hatalı olarak sisteme kaydedilen alıcı adresleri Syntax doğrulamasından geçirilerek tespit edilir ve raporlanır.</p>
                         </div>
                         <div class="dogrulama-img col-md-6">
                             <div class="vector-bg"><img src="assets/img/vector-bg.png"></div>
@@ -267,12 +265,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <img src="assets/img/dogrulama/2.svg" class="vector-two-img">
                         </div>
                         <div class="col-md-6">
-                            <h2>MX Kaydı</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
+                            <h2>MX Kaydı Sorgulaması Nedir?</h2>
+                            <p>MX kaydı, bir E-Mail adresine gelen iletileri alıcının E-Mail hesabının bulunduğu sunucuya yönlendiren alan adı ile ilişkilendirilmiş DNS kaydıdır. Herhangi bir alıcıya bir iletinin teslim edilip edilemeyeceğini belirleyen MX kaydının hatalı olması veya olmaması durumunda gönderdiğimiz iletilerin alıcılara ulaşması mümkün değildir.</p>
+                            <p>MX Kaydı doğrulaması sayesinde alıcı listelerinde yer alan adreslere teslimatın yapılıp yapılamayacağı önceden tespit edilerek, teslim edilemeyecek adreslerin ayrıştırılarak raporlanması bu sayede zaman ve para kaybının önüne geçilmesi mümkündür.</p>
                         </div>
                     </div>
                     <div><p id="gecici"></p></div>
@@ -285,12 +280,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <h2>Geçici Posta</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
+                            <h2>Geçici Posta Adres Doğrulaması Nedir?</h2>
+                            <p>Geçici e-mail servisleri, çoğunlukla web tabanlı platformlara üyelik aktivasyonlarını tamamlamak için kullanıcılar tarafından tercih edilen belirli bir süre için kullanıma açıldıktan sonra otomatik olarak sonlanan tek kullanımlık e-mail servisleridir. Kullanıcılar üyelik esnasında gerçek bilgilerini vermekten kaçınarak tek kullanımlık e-mail servislerini tercih etmekte bu sayede üyelik sonrası gelebileceğini düşündükleri ilgisiz reklamlardan kurtulmayı amaçlamaktadırlar.</p>
+                            <p>Ancak bu durum gönderici için oldukça olumsuz sonuçlar doğurmakta üyelik esnasında belirli bir süreliğine açılmış olan e-mail adresine ileti gönderimine devam edilmesi durumunda spam havuzlarına kolaylıkla düşülmektedir. Göndericinin itibarını olumsuz olarak etkileyen bu doğrulama servisi ile alıcı listesi içerisinde yer alan geçici adresler tespit edilebileceği gibi üyelik esnasında da adres doğrulaması yapılarak geçici adresler ile kayıt yapılması engellenebilir.</p>
                         </div>
                         <div class="dogrulama-img col-md-6">
                             <div class="vector-bg"><img src="assets/img/vector-bg.png"></div>
@@ -311,12 +303,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <img src="assets/img/dogrulama/4.svg" class="vector-two-img">
                         </div>
                         <div class="col-md-6">
-                            <h2>Kullanıcı Gerçekte Var mı?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
+                            <h2>Kullanıcı Doğrulaması Nedir?</h2>
+                            <p>Gönderim yapılacak bir e-mail adresinin doğrulanması için başta adresin yazımı denetlenir, ardından ilgili adresin e-mail alıp alamayacağını belirleyen MX Kaydı sorgulaması yapılır, doğrulamanın son adımı ise kullanıcının ilgili etki alanında gerçekten bulunup bulunmadığıdır. Zira e-mail adresinde belirtilen alan adı gerçekte var olan bir kuruma ait olabilir ancak bu kullanıcının bu kuruluşa ait bir posta hesabına sahip olduğu anlamına gelmez.</p>
+                            <p>Gerçekte var olmayan kullanıcılara gönderim yapılması gönderici itibarını oldukça olumsuz etkilemektedir. Bu nedenle gönderim yapılan alıcı listesindeki diğer adreslere teslimat yapılması da riske edilmiş olur. Kullanıcı doğrulaması bu riski ortadan kaldırarak ilgili etki alanının e-mail servisi veren sunucusuna girerek teslimat yapıp yapamayacağını öğrenir ve raporlar.</p>
                         </div>
                     </div>
                 </div>
