giris.html sayfası
giris.html sayfasına da sözleşme okudum onaylıyorum eklendi.

--- a/giris.html
+++ b/giris.html
@@ -229,6 +229,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <i>En az 1 büyük harf ve en az 1 rakam içermelidir.</i>
                                             </div>
 
+                                            <div class="col col-md-12 col-sm-12 col-xs-12 mt-10 mb-20">
+
+                                                            <label>
+                                                                    <input name="hatirla" value="1" type="checkbox"> <a href="sozlesme.html" target="_blank">Sözleşmeyi</a>  okudum onaylıyorum
+                                                            </label>
+
+                                                        </div>
+
+
                                             <div class="col col-md-12 col-sm-12 col-xs-12">
                                                 <button class="btn btn-blue send-button" value="1" type="submit">Üye Ol</button>
                                             </div>
