sss deki eksik js kutupanesi eklendi
sss deki eksik js kutupanesi eklendi

sıkca sorulan sorular fonsyonel hale geldi

--- a/sss.html
+++ b/sss.html
@@ -34,6 +34,7 @@
 
     <script src="assets/js/jquery-1.9.1.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
+	<script src="https://code.jquery.com/ui/1.9.1/jquery-ui.min.js" integrity="sha256-UezNdLBLZaG/YoRcr48I68gr8pb5gyTBM+di5P8p6t8=" crossorigin="anonymous"></script>
 
     <!--[if lte IE 7]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
